* Imporved map accuracy
* Improved Victarion camp
* Improved golden camps
* Improved westeros towers
* Improved asshai tower
* Improved quests
* Improved code of killing ice creatures (now all spears of needed materials are ok)
* Increased village spawn
* Reduced chance of baobab plains in dothraki sea

* Oprimized structures' code
* Optimized code of fixed structures

* Fixed bugs with bandit names
* Fixed bugs in english lang file
* Fixed bugs in chinese lang file
* Fixed bugs with gui textures
* Fixed bug with giant skins
* Fixed bug with English speechbanks
* Fixed bug with quotes
* Fixed bug with not rare baobabs in sothoryos
* Fixed bug with wrong water color
* Fixed bug with too rare villages in southern essos
* Fixed bug with wrong roads in a few settlements
* Fixed bug with shifted Sothoryos pyramid
* Fixed bug with dirt path in Asshai
* Fixed bug with huge trees with broken generation
* Fixed critical bug caused by disappeared meta-info and broken coremod (horses, fences, etc)
* Fixed potential bug caused by growing Desert Trees at the top limit of the world (256)
* FIxed potential bug with rare thenn spawning
* Fixed bug with glowing titles, that should be visible only during the night
* Fixed bug with always english rank achievements in the chat
* Fixed bug with rare intersection of random and fixed villages (bigger check radius)

- Removed too giant oaks from forests

>>BUILD 23.05.11
+ Now conquested enemy waypoints are red on the map

* Meereen wp, city and pyramid were moved to be easily found from point.

* Improved ghiscar pyramids (gameplay isn't broken now)
* Improved crossbowers' AI
* Improved wetwood biome
* Improved translations

* Fixed bug with map
* Fixed potential bug caused by duplicated lines in translation files
* Fixed bug with concrete and concrete powder mechanics
* Fixed bug with gui shift when using NEI + drinking potion
* Fixeg bug with prostitute skins
* Fixed bug with sword of command rendering
* Fixed bug with point rendering